<resources>
    <string name="app_name">MyPlant</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="register">Sign Up</string>
    <string name="click_to_login">login here</string>
    <string name="click_to_register">sign up here</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="profile">profile</string>
    <string name="plant">plant</string>
    <string name="calendar">calendar</string>
    <string name="home">home</string>
    <string name="mycalendar">MyCalendar</string>
    <string name="plants">Plants</string>
    <string name="tanaman">Tanaman</string>
    <string name="myplant_logo">MyPlant Logo</string>
    <string name="desc">is currently under development</string>
    <string name="add_plant">Add Plant</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_password">Forgot password</string>
    <string name="submit">Submit</string>
    <string name="already_have_account">Already have account</string>
    <string name="login_here">Login here</string>
    <string name="nothing_to_do">Nothing To Do</string>
    <string name="watering">Watering</string>
    <string name="task">Task</string>
    <string name="add_watering_task">Add Watering Task</string>
    <string name="plant_name">Plant name</string>
    <string name="water_quantity">Water quantity</string>
    <string name="profile_image">Profile Image</string>
    <string name="icon">icon</string>
    <string name="Home">Home</string>
</resources>