<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_plant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/plant_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_water_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/water_quantity"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_save_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/primary"
        android:textColor="@color/putih"
        android:layout_marginTop="16dp" />
</LinearLayout>
