<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Edit profile TextView -->
        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_profile"
            android:src="@drawable/baseline_account_circle_24" />

        <!-- User Details TextView -->
        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_image"
            android:layout_centerHorizontal="true"
            android:text="@string/user"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Name EditText -->
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_details"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="32dp"
            android:hint="Enter your name"
            android:textSize="18sp"
            android:padding="10dp" />

        <!-- save Button -->
        <Button
            android:id="@+id/save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/accent"
            android:text="@string/save" />
    </RelativeLayout>

</FrameLayout>